# DFFT_on_LSD

./: .gitignore  README.md  computeDft.m  test.m
p3/p30/: main.cc
p30/: Output256.txt  main.cc
p30/src/: complex.cc
p31/: CMakeLists.txt  TimeTest512.txt
p32/: CMakeLists.txt  TimeTest1024.txt  main.cc  timing.bash
p33/: TimeTest128.txt  TimeTest256.txt
p3_CPU/: CMakeLists.txt  main.cc
p3_CPU/src/: complex.cc
p3_CTHREADS/: CMakeLists.txt
p3_CUDA/: CMakeLists.txt  main.cu
p3_MATLAB/: computeDft.m  test.m
p3_PTHREADS/: CMakeLists.txt
